# coin-flip-anchor-example

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
client/: client.ts  main.ts
programs/feed-protocol-example-anchor-program/: Cargo.toml
programs/feed-protocol-example-anchor-program/src/: lib.rs
